alignment fixed and margins good,mobile reponsivness added

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
+
 body{
     background-color: #141414;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 90vh;
+    padding: 10px;
 }
 
 .card {
@@ -11,36 +13,61 @@ body{
     border: 1px solid #1f1f1f;
     border-radius: 10px;
     text-align: center;
-    padding: 30px;
-
+    padding: 40px 10px 25px 10px;
 }
 
 .img { 
     border-radius: 50%;
-    width: 48px;
-    height: 48px;
+    width: 70px;
+    height: 70px;
 }
 
 #name {
     color: white;
+    font-family: Inter;
+    font-weight: 800;
+    font-size: 24px;
+    margin-bottom: 0px;
 }
 
 #location{
     color:#cbf144;
+    font-family: Inter;
+    font-weight: 600;
+    margin-top: 5px;
+    font-size: 14px;
+
 }
 
 #description {
     color: white;
-    
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.links {
+ 
 }
 
 .links p {
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    
     color:white;
     background-color: #333333;
 
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 13px;
+    height: 40px;
     border-radius: 10px;
-    width: 100%;
-    height: 30px;
+    margin: 13px;
+
 }
 
 .links p:hover {
